--- a/calico-cloud/get-started/connect/requirements/rke2.mdx
+++ b/calico-cloud/get-started/connect/requirements/rke2.mdx
@@ -2,7 +2,7 @@
 description: RKE2-specific requirements.
 ---
 
-# RKE2 requirements
+# RKE2 (Rancher Government) requirements
 
 ## Verify system requirements
 
@@ -14,7 +14,7 @@ Although {{prodname}} checks that your cluster meets [System requirements](syste
 
 ## Verify RKE2 settings
 
-1. Verify you have a compatible [RKE2 cluster](https://docs.rke2.io/).
+1. Verify you have a compatible [RKE2 cluster](https://docs.rke2.io/), with 2.6.5 or later
 
 1. On your RKE2 cluster, configure the plugin setting to: `no CNI plugin` using any of the following methods. For help, see [Configure your cluster with a CNI plugin](https://docs.rke2.io/install/configuration).
 
