Add Tigera operator PSP step in docs
When Calico Enterprise v3.15+ is installed on a cluster with k8s <=
v1.24 and the admission controller is enabled, we need this additional
step to apply Tigera Operator PSP before applying the Tigera Operator
manifest.

--- a/calico-enterprise/getting-started/install-on-clusters/rke2.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/rke2.mdx
@@ -52,7 +52,7 @@ The geeky details of what you get:
 
 1. [Configure a storage class for {{prodname}}.](../../operations/logstorage/create-storage.mdx).
 
-1. If you are using RKE2 [CIS hardened clusters](https://docs.rke2.io/security/hardening_guide) with v1.24 or earlier, install the required Tigera operator PSP.
+1. In a v1.24 or earlier cluster, if the [PodSecurityPolicy admission controller](https://v1-24.docs.kubernetes.io/docs/reference/access-authn-authz/admission-controllers/#podsecuritypolicy) is enabled or it is a [CIS hardened cluster](https://docs.rke2.io/security/hardening_guide), install the required Tigera operator Pod Security Policy.
 
    ```batch
    kubectl create -f {{filesUrl}}/manifests/psp-tigera-operator.yaml
