--- a/calico-cloud/networking/egress/external-network.mdx
+++ b/calico-cloud/networking/egress/external-network.mdx
@@ -10,52 +10,52 @@ Allows workloads from different namespaces of a Kubernetes cluster to egress ont
 
 ## Value
 
-When traffic from particular applications leaves the cluster to access an external destination, egress gateway enables users to control the source IP of that traffic. However, in this case, egress gateway sees all the external destinations as a flat L3 network. If a user has a network topology which involves multiple external networks and the service endpoints in those networks may have overlapping IPs, it becomes a mandatory requirement that {{prodname}} should be able to direct the egress traffic to the service endpoint in the designated network.
+When traffic from particular applications leaves the cluster to access an external destination, egress gateway enables users to control the source IP of that traffic. However, in this case, egress gateway sees all the external destinations as a flat L3 network. If a user has a network topology which involves multiple external networks and the service endpoints in those networks may have overlapping IPs, it becomes a mandatory requirement that {{prodname}} should be able to direct the egress traffic to the service endpoint in the correct network.
 
 For example, suppose a user has a network setup as below:
 There are two external networks (Red and Yellow) outside the cluster. A web server on network Red is exposing its service at `105.8.10.1`. A database server on network Yellow is exposing its service at `105.8.10.1` too.
 
-Then the user could have the requirement as followings:
+Then the cluster could have requirements as follows:
 Pods in Red namespace should send traffic via egress gateways to `105.8.10.1` on external network Red.
 Pods in Yellow namespace should send traffic via egress gateways to `105.8.10.1` on external network Yellow.
 
-External network support is introduced into {{prodname}} in order to meet those requirements. It allows user to associate a egress gateway to external networks so that the egress traffic originated from the client via that egress gateway will be routed to the service endpoints on the associated external networks. In a word, external network feature supports L3 segmentation of the outgoing egress traffic.
+External network support is introduced into {{prodname}} in order to meet those requirements. It allows user to associate a egress gateway to external networks so that the egress traffic originated from the client via that egress gateway will be routed to the service endpoints on the associated external networks. In a nutshell, the external network feature adds support for L3 segmentation of outgoing egress traffic.
 
 ## Prerequisites
 
-- IPs on multiple external networks may overlapping with each other, however, those IPs do not overlap with the IPs of pods within the cluster or their hosts.
-- IPs of the BGP peers peering with the cluster should not be overlapping.
+- IPs on multiple external networks may overlap with each other, however, those IPs must not overlap with the IPs of pods within the cluster or their hosts.
+- IPs of the BGP peers peering with the cluster should not overlap.
 
 ## Limitations
 
-- This feature should be used in the combination of egress gateway support. Sending traffic from a client pod to external networks without going through an egress gateway is not supported.
-- This feature supports IPv4 only.
+- This feature should be used in combination with egress gateways. Sending traffic from a client pod to external networks without going through an egress gateway is not supported.
+- This feature only supports IPv4.
 
 ## Before you begin
 
-These features require you to understand how to configured a functioning egress gateway deployment in a cluster. For more information on deploying egress gateways, [see our other egress gateway guides](./)
+This feature requires you to understand how to configure a functioning egress gateway deployment in a cluster. For more information on deploying egress gateways, [see our other egress gateway guides](./).
 
 ## Concepts
 
 ### Egress node
-A node in the cluster which is peering with external networks and populating routes to direct traffic from the egress gateway to the destination on external networks. Any egress gateway which is associated to an external network should be scheduled to be running on a egress node.
+A node in the cluster which is peering with external networks and populating routes to direct traffic from the egress gateway to the destinations on external networks. Any egress gateway which is associated to an external network should be scheduled to be running on a egress node.
 
 ### BGP bootstrap routes
-BGP bootstrapping routes are routes on the node for traffic from that node to reach other nodes in the cluster, or other destinations outside the cluster, via whatever routers and external networks the customer wants. It is outside of the scope of {{prodname}} as {{prodname}} requires bootstrapping routes to be set up before peering with the router.
+BGP bootstrapping routes are routes on the node for traffic from that node to reach other nodes in the cluster, or other destinations outside the cluster, via whatever routers and external networks the user may need. This is considered outside of the scope of {{prodname}}, as both {{prodname}} and external BGP routers on external networks may require bootstrapping routes to be set up before peering with each other.
 
 ## How to
 
 ### Enable egress gateway support
 
 In the default **FelixConfiguration**, set the `egressIPSupport` field to `EnabledPerNamespace` or
-`EnabledPerNamespaceOrPerPod`, according to the level of support that you need in your cluster. For support on a per-namespace basis only:
+`EnabledPerNamespaceOrPerPod`, according to the level of granularity that you need in your cluster. For support on a per-namespace basis only:
 
 ```bash
 kubectl patch felixconfiguration.p default --type='merge' -p \
     '{"spec":{"egressIPSupport":"EnabledPerNamespace"}}'
 ```
 
-Or for support both per-namespace and per-pod:
+Or to support both per-namespace and per-pod:
 
 ```bash
 kubectl patch felixconfiguration.p default --type='merge' -p \
@@ -71,7 +71,7 @@ kubectl patch felixconfiguration.p default --type='merge' -p \
     '{"spec":{"externalNetworkSupport":"Enabled"}}'
 ```
 
-### Create external network resources 
+### Create external network resources
 
 Add an `ExternalNetwork` resource to the cluster for each external networks. For example, to create an `ExternalNetwork` for `red` network.
 
@@ -85,14 +85,14 @@ spec:
 routeTableIndex: 500
 EOF
 ```
-:::note
+:::warning
 
-Set `routeTableIndex` to the index of a linux kernel routing table that should be used for the routes associated with the external network. The value should be unique for each external network. The value should not be in the range of `RouteTableRanges` field in FelixConfiguration. The kernel routing table index should not be used by other processes on the node.
+Set `routeTableIndex` to the index of a linux kernel routing table that will be used for the routes associated with the external network. The value should be unique for each external network. The value must not be in the range of `RouteTableRanges` field in FelixConfiguration, as {{prodname}} uses tables in that range for various purposes. The kernel routing table index must not be used by other processes on the node. A conflict resulting in {{prodname}} using the same routing table index as a configured external network may result in network outages!
 
 :::
 
-{{prodname}} automatically picks up bootstrapping routes into the routing table used by an external network if those routes are pre-configured as a directly connected L2 route by the customer in the main routing table.
-If the main routing table does not have the bootstrapping routes, the customer should pre-configure this routing table with bootstrapping routes on each egress node outside of Calico to include whatever routes are needed for Calico to reach the BGP peer.
+{{prodname}} automatically picks up bootstrapping routes into the routing table used by an external network if those routes are pre-configured as a directly connected L2 route by the user in the main routing table.
+If the main routing table does not have the bootstrapping routes, the user should pre-configure this routing table with bootstrapping routes on each egress node outside of {{prodname}} to include whatever routes are needed for {{prodname}} to reach the BGP peer.
 
 ### Label egress node
 
@@ -167,9 +167,9 @@ Where:
 - Where externalNetworks associates this egress gateway deployments with external network `red`. All traffic leaving the egress gateway to an external destination will be routed to the destination on external network `red`.
 - Node selector `egress: true` forces egress gateway pods of the deployment to be scheduled on egress nodes.
 
-:::note
+:::warning
 
-If multiple networks in the `externalNetworkNames` list (of the egress gateway) advertise the same prefix to Calico then traffic to those prefixes will flow to a non-deterministic network. It is the user's responsibility to make sure it will never happen.
+If multiple networks in the `externalNetworkNames` list (of the egress gateway) advertise the same prefix to {{prodname}} then traffic to those prefixes will flow to a non-deterministic network, which may result in hard-to-debug connectivity issues. It is the user's responsibility to make sure it will never happen.
 
 :::
 
